# weatherinforrest

./: .gitignore  .replit  ALTERNATIVE_HISTORICAL_SOLUTIONS.md  API_SUBSCRIPTION_GUIDE.md  CSV_IMPORT_GUIDE.md  CURRENT_STATUS_SUMMARY.md  CUSTOM_URL_SETUP.md  GET_TUYA_TOKENS.md  HISTORICAL_DATA_SOLUTION_GUIDE.md  LINK_DEVICE_TO_TUYA.md  README.md  REPLIT_INTERFACE_GUIDE.md  SETUP_GUIDE.md  SMART_LIFE_EXPORT_TROUBLESHOOTING.md  THREE_DAY_REMINDER.md  TUYA_FIX_STEPS.md  TUYA_SUPPORT_REQUEST.md  TUYA_TROUBLESHOOTING.md  WEATHER_STATION_SOLUTIONS.md  api_troubleshoot.py  app.py  auto_collector_service.py  check_project_setup.py  comprehensive_data_extraction.py  config.py  data_collector.py  database.py  decode_historical_data.py  device_memory_collector.py  fix_signature.py  fixed_tuya_client.py  frequent_data_collector.py  garni_historical_data.py  historical_data_test.py  local_tuya_client.py  persistent_weather_service.py  pyproject.toml  replicate_working_request.py  replit.md  simple_app.py  (+14 more)
.streamlit/: config.toml
