[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "meteostat>=1.7.4",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "streamlit>=1.47.0",
    "tinytuya>=1.17.2",
    "trafilatura>=2.0.0",
]
